# FRVT

./: CMakeLists.txt  README.md
11/src/include/: FaceDetection.h  FaceRecognize.h  anchor_generator.h  facestructs.h  fd_config.h  fd_id.h  fd_opt_id.h  fr_id.h  fr_opt_id.h  platform.h  tools.h
11/src/nullImpl/: CMakeLists.txt  FaceDetection.cpp  FaceRecognize.cpp  anchor_generator.cpp  fd_config.cpp  nullimplfrvt11.cpp  nullimplfrvt11.h  tools.cpp
11/src/testdriver/: CMakeLists.txt
adaface_torch/: README.md  dataset.py  eval_ijbc.py  losses.py  test.py  torch2onnx.py  train.py
adaface_torch/backbones/: __init__.py  elannet.py  iresnet.py
adaface_torch/backbones/past/: __init__.py  elannet.py
adaface_torch/configs/: base.py  ms1m_resnet_local.py  wf42m_pfc_8gpus_fr.py  wf4m_resnet_local.py
adaface_torch/no_use/: losses_origin.py  partial_fc_v2.py
adaface_torch/tools/: im2lst.py
arcface_ada/: README.md  partial_fc.py  requirement.txt  torch2onnx.py  train.py
arcface_ada/backbones/: LResNeXt.py  __init__.py  resnest.py  resnet.py  resnext.py
arcface_ada/backbones/past/: resnest.py
arcface_ada/configs/: base.py  webface42m_bottlenet_resnet.py  webface42m_bottlenet_resnet_local.py  wf42m_pfc_8gpus_fr_pretrain.py
arcface_ada/configs/no_use/: ms1mv2_mbf.py  ms1mv2_r100.py
arcface_ada/configs/origin/: ms1mv3_mbf.py  ms1mv3_r50.py  wf12m_conflict_r50.py  wf12m_conflict_r50_pfc03_filter04.py  wf12m_flip_pfc01_filter04_r50.py  wf12m_flip_r50.py  wf42m_pfc02_16gpus_mbf_bs8k.py  wf42m_pfc02_16gpus_r100.py  wf42m_pfc02_32gpus_r50_bs4k.py  wf42m_pfc02_8gpus_r50_bs4k.py  wf42m_pfc02_r100_16gpus.py  wf42m_pfc02_r100_32gpus.py  wf42m_pfc03_32gpu_r100.py  (+6 more)
arcface_ada/no_use/: losses.py
arcface_ada/tools/: imrec2idx.py
arcface_ada/utils/: plot_line.py  utils_callbacks.py
arcface_torch/: dataset.py  eval_ijbc.py  inference.py  partial_fc_v2.py  requirement.txt  test.py  torch2onnx.py  train.py
arcface_torch/backbones/: __init__.py  elanet.py  iresnet.py  repvggnet.py  resnest.py  resnet.py  resnext.py
arcface_torch/configs/: base.py  webface42m_bottlenet_resnet.py  webface42m_bottlenet_resnet_local.py  wf42m_pfc_8gpus_fr.py  wf42m_pfc_8gpus_fr_r100.py
arcface_torch/eval/: eval.md  verification.py
arcface_torch/no_use/: partial_fc.py
arcface_torch/tools/: generateDatasetLabel.py  img2label.py  imlst2rec.py
arcface_torch/utils/: checkpoint.py  fr_tran.sh  fr_tran_local.sh  plot_line.py
ncnn_tool/: README.md  README.txt
(+18 files in other folders)
